tests/fixtures/multi_module/invalid/missing_target/a.furqan
// D9/D20 G1 fixture. A depends on B, but B is not in the directory.

bismillah A {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: depends_on_missing
    not_scope: nothing_excluded
}

tanzil a_deps {
    depends_on: B
}
